# agentic-ai-masterclass

./: .editorconfig  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
skills/: python-docstrings.md
solution/: .env  pyproject.toml
solution/skills/: how-to-write-new-skills.md
solution/src/coding_assistant/: main.py
solution/src/coding_assistant/capabilities/: file_operations.py  reasoning_effort.py  skills.py
src/coding_assistant/: deps.py  main.py  utils.py
src/coding_assistant/capabilities/: file_operations.py  reasoning_effort.py
